testsuite/tests/properties/invalid_predicate/no_logic_var/test.lkt
from common import BaseExample, FooNode

class Example: BaseExample {
    @exported fun prop(): Entity[FooNode] = {
        val _ = Example.pred1%();
        node.as_bare_entity
    }
}
